<resources>
    <string name="app_name">HistoryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="heroes">Heroes</string>
    <string name="locations">Locations</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_title">Enter title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="heroes_">Heroes</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location</string>
</resources>